[tool.poetry]
name = "production-engineering"
version = "0.1.0"
description = ""
authors = ["Laith-Rasheed <laithrasheed747@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.3.1"
pandas = "^2.3.1"
matplotlib = "^3.10.3"
scikit-learn = "^1.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
